Fix link colour contrast.

--- a/src/sass/mys-cards.scss
+++ b/src/sass/mys-cards.scss
@@ -13,7 +13,7 @@
 }
 
 .print-button {
-  color: $blue-mid !important;
+  color: $blue !important;
   border-bottom: 0 !important;
   
   .icon {
